[package]
name = "tibber_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local_credentials = { git = "https://github.com/CasaMack/local_credentials.git", features = ["async"] }
tracing-subscriber = { version = "0.3" }
tracing-appender = { version = "0.2" }
influxdb = { version = "0.5.2", features = ["derive"] }
chrono = { version = "0.4" }
chrono-tz = "0.8.1"
graphql_client = { version = "0.10.0", features = ["reqwest"]}
reqwest = { version = "0.11" }
tracing = { version = "0.1" }
serde = { version = "1.0.137" }
tokio = { version = "1.19.2", features = ["full"] }

# Thou shall compile
openssl = { version = "0.10.29", features = ["vendored"] }
